<resources>
    <string name="app_name">MessagingApplication</string>
    <string name="facebook_app_id">1111785798933935</string>
    <string name="fb_login_protocol_scheme">fb1111785798933935</string>
    <string name="cancel_button">Cancel</string>
    <string name="login_button">Login</string>
    <string name="text">Do not have an account?</string>
    <string name="signup">Sign UP</string>
    <string name="title">Login to Send Messages</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter your email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="menu_1">Logout</string>
    <string name="menu_3">New Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_chats">There are no chats to display</string>
    <string name="no_contacts">There are no contacts to display</string>
    <string name="message_hint">Enter your Message</string>
    <string name="send_message">Send Message</string>
</resources>
